# production-rag-system

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: prompts.yaml
docs/: ARCHITECTURE.md  DASHBOARD_GUIDE.md  HNSW_EXPLAINED.md  PROJECT1_LEARNINGS.md  PROJECT3_LEARNINGS.md  VISUAL_GUIDE.md
eval/: golden_dataset.json
scripts/: populate_dashboard.py  test_tracing.py
src/rag/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/rag/chunking/: token_chunker.py
src/rag/evaluation/: cli.py  dataset.py  runner.py
src/rag/generation/: citation_validator.py  generator.py  prompt_manager.py
src/rag/ingestion/: loaders.py  pipeline.py
src/rag/observability/: __init__.py  langfuse_client.py  metrics.py  traced_pipeline.py
src/rag/retrieval/: bm25_retriever.py  hybrid_retriever.py  reranker.py  vector_store.py
tests/: test_models.py
tests/test_chunking/: test_token_chunker.py
tests/test_evaluation/: test_dataset.py  test_runner.py
tests/test_generation/: test_citation_validator.py  test_prompt_manager.py
tests/test_ingestion/: test_loaders.py  test_pipeline.py
tests/test_observability/: test_langfuse_client.py  test_metrics.py
tests/test_retrieval/: test_bm25.py  test_hybrid.py
